--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav:nth-child(2) {
   position: absolute;
   width: 0;
   height: 3px;
-  background-color: tomato;
+  background-color: pink;
   top: 0;
   left: 0;
   transition: 0.5s;
